--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "uuid4": "^2.0.3"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
